--- a/main.tex
+++ b/main.tex
@@ -505,9 +505,7 @@ Yet, the proof of our Proposition~\ref{prop:TL} is similar to the proof of \cite
             \varphi(\gamma) = \varphi(0) + \gamma \varphi'(0) + \int_{0}^{\gamma} (\gamma - t)\varphi''(t)dt.
         \end{equation}
         We now identify each term. First, 
-        \begin{equation*}
-    \varphi(0) = \cF(\mu_n)\; \text{ and } \;\varphi(\gamma) = \cF(\mu_{n+1}).
-        \end{equation*} 
+$\varphi(0) = \cF(\mu_n)$ and $\varphi(\gamma) = \cF(\mu_{n+1})$.
         Then, 
         % using the chain rule~\cite[Section 8.2]{villani2003topics}, 
         % \begin{equation*}
@@ -703,7 +701,7 @@ Conditions under which $I_{\st}(\mu_n|\pi) \rightarrow_{n \to +\infty} 0 \Righta
 
 \begin{corollary}[Convergence rate]
 \label{cor:conv}
-Let Assumptions \ref{ass:k_bounded}, \ref{ass:V_Lipschitz} and \ref{ass:T1} hold true. Let $\alpha > 1$. 
+Let Assumptions \ref{ass:V_Lipschitz}, \ref{ass:T1} and  \ref{ass:k_bounded} hold true. Let $\alpha > 1$. 
   If 
   \begin{equation*}
       \gamma \leq \min\left((\alpha-1)\left(\alpha B^2 \left(1 + \|\nabla F(0)\| + L \int \|x\|d\pi(x) + L \sqrt{\frac{2\cF(\mu_0)}{\lambda}} \right)\right)^{-1},\frac{1}{B (\alpha^2 + L)}\right),
