--- a/main.tex
+++ b/main.tex
@@ -793,7 +793,7 @@ Let Assumptions~\ref{ass:V_Lipschitz}--\ref{ass:k_bounded} hold true. Let $\alph
 	\begin{equation*}
 		\int e^{-F(x)}dx\geq \int_{\cup_i B_{\epsilon}(x_i)}e^{-F(x)}dx\geq +\infty\cdot e^{-C-L\epsilon^2}|B_{\epsilon}(0)|=+\infty,
 	\end{equation*}
-	this indicates $\pi$ can't be normalized, so we have proved the first assertion. Since  $|x|\mapsto +\infty$, $F\mapsto +\infty$, we can find radius $R$ such that outside $B_R(0)$, $F\geq 2|F(0)|$, so inside $B_{R}(0)$, there must be a minimum point $x^{*}$, which is also a global minimum point( $|x^*|< R$ since on the boundary $F\geq 2|F(0)|$, but $F(x^*)\leq F(0)$) so at this point $\nabla F(x^*)=0$ .
+	this indicates $e^{-F}$ can't be normalized, so we have proved the first assertion. Since  $|x|\mapsto +\infty$, $F\mapsto +\infty$, we can find radius $R$ such that outside $B_R(0)$, $F\geq |F(0)|+1$, so inside $B_{R}(0)$, there must be a minimum point $x^{*}$( $|x^*|< R$ since on the boundary $F\geq |F(0)|+1$) so at this point $\nabla F(x^*)=0$ .
 	}
 
 
