--- a/main.tex
+++ b/main.tex
@@ -190,7 +190,15 @@ As sampling algorithms are intended to be applied to large scale problems, it ha
 
 \subsection{SVGD}
 
-Stein Variational Gradient Descent (SVGD)~\cite{liu2016stein,liu2017stein} is an alternative to the Langevin algorithm that has been applied in several contexts in machine learning, including Reinforcement Learning~\cite{liu2017policy}, sequential decision making~\cite{zhang2018learning,zhang2019scalable}, Generative Adversarial Networks~\cite{tao2019variational}, Variational Auto Encoders~\cite{pu2017vae}, and Federated Learning~\cite{kassab2020federated}. However, the theoretical understanding of SVGD is limited compared to that of Langevin algorithm~\cite{lu2019scaling,duncan2019geometry,liu2017stein,chewi2020svgd,nusken2021stein}. In particular, the first complexity result of SVGD, due to~\citet[Corollary 6]{korba2020non}, appeared only recently, and relies on an assumption on the trajectory of the algorithm, which cannot be checked prior to running the algorithm. Basically, this assumption is that the first moment of the iterates remain uniformly bounded by a constant $C$ at every iteration. Moreover, their complexity bound~\cite[Corollary 6]{korba2020non} does not make the dependence on the dimension $d$ of the problem explicit, precisely because this bound depends on $C$.
+Stein Variational Gradient Descent (SVGD)~\cite{liu2016stein,liu2017stein} is an alternative to the Langevin algorithm\Sun{ which is by discretizing the following Langevin dynamics:
+	\begin{equation*}
+		dX(t)=-\nabla F(X)dt+\sqrt{2}dB(t),
+	\end{equation*} 
+where B is a standard Brownian motion in $\mathbb{R}^d$.  In Langevin algorithm, the drift term  leads the algorithm to explore high probability regions around the local minima of $F$, while the diffusion term or the random noise promotes the algorithms to explore the entire state space outside the basin of attraction. SVGD is by empirical approximation of 
+	\begin{equation*}
+		k*(-\nabla F\mu)-\nabla k*\mu,
+	\end{equation*}
+qualitatively speaking, $k*(-\nabla F\mu)$ plays the same role as the drift term in Langevin daynamics, which leads the particles towards local minima of $F$, on the other hand term $ k*\mu$ can be seen as the interaction energy of particles with density $\mu$, in this sense $-\nabla k*\mu$ will promote particles disperse without gathering together around the local minima of $F$. SVGD is a kind of deterministic sampling method while Langevin algorithm is a kind of stochastic sampling method and SVGD  }  has been applied in several contexts in machine learning, including Reinforcement Learning~\cite{liu2017policy}, sequential decision making~\cite{zhang2018learning,zhang2019scalable}, Generative Adversarial Networks~\cite{tao2019variational}, Variational Auto Encoders~\cite{pu2017vae}, and Federated Learning~\cite{kassab2020federated}. However, the theoretical understanding of SVGD is limited compared to that of Langevin algorithm~\cite{lu2019scaling,duncan2019geometry,liu2017stein,chewi2020svgd,nusken2021stein}. In particular, the first complexity result of SVGD, due to~\citet[Corollary 6]{korba2020non}, appeared only recently, and relies on an assumption on the trajectory of the algorithm, which cannot be checked prior to running the algorithm. Basically, this assumption is that the first moment of the iterates remain uniformly bounded by a constant $C$ at every iteration. Moreover, their complexity bound~\cite[Corollary 6]{korba2020non} does not make the dependence on the dimension $d$ of the problem explicit, precisely because this bound depends on $C$.
 
 
 
