--- a/math.bib
+++ b/math.bib
@@ -44,10 +44,10 @@
 }
 
 @inproceedings{chewi2020svgd,
-  title={SVGD as a kernelized Wasserstein gradient flow of the chi-squared divergence},
-  author={Chewi, Sinho and Gouic, Thibaut Le and Lu, Chen and Maunu, Tyler and Rigollet, Philippe},
+  title={{SVGD} as a kernelized Wasserstein gradient flow of the chi-squared divergence},
+  author={Chewi, S. and Gouic, T. Le and Lu, C. and Maunu, T. and Rigollet, P.},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
-  note={to appear},
+pages = {2098--2109},
   year={2020}
 }
 
@@ -359,8 +359,8 @@ MRREVIEWER = {V. K. Ohanyan},
 }
 
 @article{carmeli2010vector,
-  title={Vector valued reproducing kernel Hilbert spaces and universality},
-  author={Carmeli, Claudio and De Vito, Ernesto and Toigo, Alessandro and Umanit{\'a}, Veronica},
+  title={Vector valued reproducing kernel {H}ilbert spaces and universality},
+  author={Carmeli, C. and De Vito, E. and Toigo, A. and Umanit{\'a}, V.},
   journal={Analysis and Applications},
   volume={8},
   number={01},
@@ -410,7 +410,7 @@ MRREVIEWER = {V. K. Ohanyan},
   year={2014}
 }
 
- @InProceedings{chewi2020gradient, title = {Gradient descent algorithms for {B}ures-{W}asserstein barycenters}, author = {Chewi, Sinho and Maunu, Tyler and Rigollet, Philippe and Stromme, {Austin J.}}, pages = {1276--1304}, year = {2020}, booktitle = {Conference on Learning Theory (COLT)}} 
+ @InProceedings{chewi2020gradient, title = {Gradient descent algorithms for {B}ures-{W}asserstein barycenters}, author = {Chewi, S. and Maunu, T. and Rigollet, P. and Stromme, {A. J.}}, pages = {1276--1304}, year = {2020}, booktitle = {Conference on Learning Theory (COLT)}} 
 
 @article{santambrogio2017euclidean,
   title={$\{$Euclidean, metric, and Wasserstein$\}$ gradient flows: an overview},
